deployment/manifest/ingress/lifesub-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-web-ingress
  namespace: dg0420-lifesub-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: dg0420.20.249.195.53.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lifesub-web
            port:
              number: 80
